@@ -48,6 +48,20 @@ class RemoteCommerceHubTest < Test::Unit::TestCase
       xid: '&x_MD5_Hash=abfaf1d1df004e3c27d5d2e05929b529&x_state=BC&x_reference_3=&x_auth_code=ET141870&x_fp_timestamp=1231877695',
       version: '2.2.0'
     }
+    @dynamic_descriptors = {
+      mcc: '1234',
+      merchant_name: 'Spreedly',
+      customer_service_number: '555444321',
+      service_entitlement: '123444555',
+      dynamic_descriptors_address: {
+        'street': '123 Main Street',
+        'houseNumberOrName': 'Unit B',
+        'city': 'Atlanta',
+        'stateOrProvince': 'GA',
+        'postalCode': '30303',
+        'country': 'US'
+      }
+    }
   end
 
   def test_successful_purchase
@@ -135,6 +149,12 @@ class RemoteCommerceHubTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_purchase_with_dynamic_descriptors
+    response = @gateway.purchase(@amount, @credit_card, @options.merge(@dynamic_descriptors))
+    assert_success response
+    assert_equal 'Approved', response.message
+  end
+
   def test_failed_purchase
     response = @gateway.purchase(@amount, @declined_card, @options)
     assert_failure response
@@ -148,14 +168,21 @@ class RemoteCommerceHubTest < Test::Unit::TestCase
     assert_equal 'Approved', response.message
   end
 
-  # Commenting out until we are able to resolve issue with capture transactions failing at gateway
-  # def test_successful_authorize_and_capture
-  #   authorize = @gateway.authorize(@amount, @credit_card, @options)
-  #   assert_success authorize
+  def test_successful_authorize_and_capture
+    authorize = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success authorize
 
-  #   capture = @gateway.capture(@amount, authorize.authorization)
-  #   assert_success capture
-  # end
+    capture = @gateway.capture(@amount, authorize.authorization)
+    assert_success capture
+  end
+
+  def test_successful_authorize_and_capture_with_dynamic_descriptors
+    authorize = @gateway.authorize(@amount, @credit_card, @options.merge(@dynamic_descriptors))
+    assert_success authorize
+
+    capture = @gateway.capture(@amount, authorize.authorization, @options.merge(@dynamic_descriptors))
+    assert_success capture
+  end
 
   def test_failed_authorize
     response = @gateway.authorize(@amount, @declined_card, @options)
